manifests/homelab/amp/Deployment-amp-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amp-exporter
  namespace: amp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amp-exporter
  template:
    metadata:
      labels:
        app: amp-exporter
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: AMP_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: AMP_PASSWORD
                  name: amp-exporter
            - name: AMP_URL
              value: http://amp.amp.svc:80
            - name: AMP_USERNAME
              value: amp-metrics
          image: ghcr.io/soynx/amp-cubecoders-exporter:0.1.0@sha256:69154b351258608e9830ff5c4e54230ff4cd66ccc77cc2ad8cb36db691ef6ed2
          livenessProbe:
            httpGet:
              path: /healthz
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 30
          name: exporter
          ports:
            - containerPort: 9822
              name: metrics
          readinessProbe:
            httpGet:
              path: /healthz
              port: metrics
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
