manifests/homelab/amp/Service-amp-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amp-exporter
  name: amp-exporter
  namespace: amp
spec:
  ports:
    - name: metrics
      port: 9822
      targetPort: metrics
  selector:
    app: amp-exporter
