manifests/homelab/amp/Service-amp-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/hostname: amp
    tailscale.com/proxy-group: ingress
  name: amp-tailscale
  namespace: amp
spec:
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 8088
  selector:
    app: amp
  type: LoadBalancer
