manifests/homelab/amp/Service-amp.yaml
apiVersion: v1
kind: Service
metadata:
  name: amp
  namespace: amp
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8088
  selector:
    app: amp
